# kung-fu-chess

./: CMakeLists.txt  bundle.py  download_sounds.py  kungfu_chess.db  repomix-output.xml  submission.cpp
apps/local_vpl/: main.cpp
core/include/: Board.hpp  GameEngine.hpp  PathValidator.hpp  Piece.hpp  Position.hpp
core/src/: Board.cpp  GameEngine.cpp  PathValidator.cpp
docs/: 01_game_rules.md  02_realtime_mechanics.md  03_architecture_overview.md  ARCHITECTURE.md
graphics_impl/img_backend/: ImgInputTranslator.hpp  ImgRenderer.hpp
include/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  kung_fu_chess.sln  kungfu_engine.vcxproj  kungfu_engine.vcxproj.filters  kungfu_game.vcxproj  kungfu_game.vcxproj.filters  kungfu_tests.vcxproj  kungfu_tests.vcxproj.filters
include/board/: Board.hpp  IBoard.hpp  Piece.hpp
include/common/: ArrivalEvent.hpp  GameConfig.hpp  GameState.hpp  PieceTokenCodec.hpp
include/engine/: GameEngine.hpp  GameSnapshot.hpp  IGameEngine.hpp  PremoveQueue.hpp
include/input/: BoardMapper.hpp  Controller.hpp
include/io/: BoardPrinter.hpp
include/pieces/: Piece.hpp
include/realtime/: CollisionDetector.hpp  RealTimeArbiter.hpp
include/rules/: CollisionResolver.hpp  PieceRules.hpp  RuleEngine.hpp
include/view/: IRenderer.hpp
infrastructure/include/: BoardFormatter.hpp  BoardParser.hpp
infrastructure/src/: BoardFormatter.cpp  BoardParser.cpp
src/: main.cpp  main_opencv.cpp  main_sfml.cpp  repomix-output.xml
src/app/: main_opencv.cpp  main_sfml.cpp
src/board/: Board.cpp  Piece.cpp
src/core/board/: Board.cpp  Board.hpp  IBoard.hpp  Piece.cpp  Piece.hpp
src/core/common/: ArrivalEvent.hpp  Enums.hpp  MoveResult.hpp  PieceTokenCodec.hpp  Position.cpp
src/core/engine/: GameEngine.cpp  GameEngine.hpp  IGameEngine.hpp  IGameObserver.hpp  MoveHistoryTracker.hpp  PremoveQueue.cpp  PremoveQueue.hpp
src/core/input/: BoardMapper.cpp  BoardMapper.hpp  Controller.cpp  Controller.hpp  InputConfig.hpp
src/core/io/: BoardParser.cpp  BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp
src/core/realtime/: CollisionDetector.cpp  CollisionDetector.hpp  CooldownTracker.hpp  Motion.cpp  Motion.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
src/core/rules/: CollisionResolver.cpp  CollisionResolver.hpp  IPieceRule.hpp  IPromotionRule.hpp  MaterialEvaluator.hpp  PieceRules.cpp  PieceRules.hpp  PromotionRules.cpp  PromotionRules.hpp  RuleEngine.cpp  RuleEngine.hpp
src/core/view/: GameSnapshot.hpp  IRenderer.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp
src/engine/: GameEngine.cpp  PremoveQueue.cpp
src/engine/actions/: ActionRequest.hpp  ActionResult.hpp  PlayerAction.hpp
src/engine/analysis/: EloCalculator.hpp  IMoveGenerator.hpp  IPositionEvaluator.hpp  IThreatAnalyzer.hpp  MoveGenerator.cpp  MoveGenerator.hpp  PositionEvaluator.cpp  PositionEvaluator.hpp  ThreatAnalyzer.hpp
src/engine/board/: Board.cpp  Board.hpp  IBoard.hpp  Piece.cpp  Piece.hpp
src/engine/common/: ArrivalEvent.hpp  BoardPresets.hpp  GameConfig.hpp  PieceTokenCodec.hpp  PieceValues.hpp  Position.cpp
src/engine/core/: GameEngine.cpp  GameEngine.hpp  IGameEngine.hpp  PremoveQueue.cpp  PremoveQueue.hpp
src/engine/events/: GameEvents.hpp  IGameObserver.hpp  MoveHistoryTracker.hpp
src/engine/io/: BoardParser.cpp  BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp
src/engine/realtime/: CollisionDetector.cpp  CollisionDetector.hpp  Motion.cpp  Motion.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
src/engine/rules/: CollisionResolver.cpp  CollisionResolver.hpp  IPieceRule.hpp  IPromotionRule.hpp  PieceRules.cpp  PieceRules.hpp  PromotionRules.cpp  PromotionRules.hpp  RuleEngine.cpp  RuleEngine.hpp
src/engine/snapshot/: GameSnapshot.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp
src/graphics/opencv/: ImgInputTranslator.hpp  ImgRenderer.hpp  img.cpp  img.hpp
src/graphics/sfml/: SfmlAssets.hpp  SfmlInputTranslator.hpp  SfmlRenderer.hpp  SfmlSoundPlayer.hpp
src/graphics_impl/: img.cpp  img.hpp
src/graphics_impl/img_backend/: ImgInputTranslator.hpp  ImgRenderer.hpp  img.cpp  img.hpp
src/graphics_impl/sfml_backend/: SfmlSoundPlayer.hpp
src/io/: BoardParser.cpp  BoardPrinter.cpp
src/pieces/: Piece.cpp
src/players/: IPlayer.hpp
src/players/ai/: AIPlayer.cpp  AIPlayer.hpp  ClassicMinimaxStrategy.cpp  ClassicMinimaxStrategy.hpp  GenericAIPlayer.hpp  IAIDecisionStrategy.hpp  RealTimeBaseStrategy.hpp  RealTimeStrategies.hpp
src/players/human/: BoardMapper.cpp  BoardMapper.hpp  Controller.cpp  Controller.hpp  HumanPlayer.cpp
src/players/network/: ClientAuth.hpp  ClientConfig.hpp  NetworkPlayer.cpp  NetworkPlayer.hpp
src/realtime/: CollisionDetector.cpp  RealTimeArbiter.cpp
src/rules/: CollisionResolver.cpp  PieceRules.cpp  RuleEngine.cpp
src/server/: ClientAuth.hpp  DatabaseManager.cpp  DatabaseManager.hpp  LiveMatch.cpp  LiveMatch.hpp  MatchManager.cpp  MatchManager.hpp  NetworkMessages.hpp  NetworkServer.hpp  NetworkSession.cpp  NetworkSession.hpp  NetworkSessionHelpers.hpp  Serializer.hpp  ServerConfig.hpp  main.cpp
src/server/match/: LiveMatch.cpp  LiveMatch.hpp  MatchFactory.cpp  MatchFactory.hpp  MatchManager.cpp  MatchManager.hpp
src/server/network/: NetworkMessages.hpp  NetworkServer.cpp  NetworkServer.hpp  NetworkSession.cpp  NetworkSession.hpp  Serializer.hpp
src/ui/animations/: Animation.hpp  (+1 more)
src/view/: SnapshotBuilder.cpp
tests/: repomix-output.xml  test_iteration4_blockers.cpp  test_iteration5_pawns.cpp  test_iteration6_time.cpp  test_main.cpp  test_parser.cpp  test_pieces.cpp
tests/integration/: AIBattleTests.cpp  AIPlayerIntegrationTests.cpp  NetworkTest.cpp  SimpleFlowTests.cpp
tests/unit/: BoardIoTests.cpp  CollisionSystemTests.cpp  ControllerAndMapperTests.cpp  GameEngineAndRealTimeTests.cpp  HumanPlayerTests.cpp  ModelTests.cpp  MoveGeneratorTests.cpp  PremoveQueueTests.cpp  RuleEngineTests.cpp
ui/: AssetManager.hpp  IRenderer.hpp  IScreen.hpp  InputEvents.hpp
ui/components/: Button.hpp  CooldownBar.hpp
(+31 files in other folders)
